# glacier-testtool

./: CMakeLists.txt  README.md  glacier-testtool.desktop
src/: CMakeLists.txt  main.cpp
src/qml/: glacier-testtool.qml  glacier-testtool.qrc
src/qml/pages/: AccelerometerPage.qml  AudioPage.qml  CompassPage.qml  GyroscopePage.qml  HapticsPage.qml  LightPage.qml  MagnetometerPage.qml  MainPage.qml  NgfPage.qml  OrientationPage.qml  ProximityPage.qml  TouchPage.qml
translations/: glacier-testtool.ts  glacier-testtool_cs.ts  glacier-testtool_de.ts  glacier-testtool_fi.ts  glacier-testtool_pl.ts  glacier-testtool_ru.ts  glacier-testtool_uk.ts
